publications: fix image size in smaller viewports properly
81efc736 was bad practice and made text overlap in L viewports 😬

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -268,6 +268,17 @@ a.summary-link {
     }
 }
 
+.pub-image img {
+    max-width: 100%; 
+    height: auto; 
+    border-radius: 5px
+}
+@media (max-width: 1199px) {
+    .pub-image img {
+        max-width: 150px !important;
+    }
+}
+
 .align-middle {
     display: flex;
     align-items: center;
